k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staynest-service
  namespace: staynest
spec:
  type: ClusterIP
  selector:
    app: staynest
  ports:
    - name: http
      port: 80
      targetPort: 3000
