k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staynest-ingress
  namespace: staynest
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: staynest.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staynest-service
                port:
                  number: 80
